--- a/app/src/main/res/layout/activity_about.xml
+++ b/app/src/main/res/layout/activity_about.xml
@@ -19,7 +19,7 @@ android:layout_marginLeft="20dp"
         android:layout_marginTop="40dp"
         >
 //hii
-
+//Hello
     <TextView
 android:layout_marginTop="20dp"
         android:layout_width="match_parent"
