--- a/app/src/main/res/layout/activity_about.xml
+++ b/app/src/main/res/layout/activity_about.xml
@@ -19,6 +19,7 @@ android:layout_marginLeft="20dp"
         android:layout_marginTop="40dp"
         >
 //hii
+//Hello1
 
     <TextView
 android:layout_marginTop="20dp"
